--- a/app/src/main/res/layout/activity_signature_details.xml
+++ b/app/src/main/res/layout/activity_signature_details.xml
@@ -5,24 +5,43 @@
     android:layout_height="match_parent"
     android:paddingStart="0dp"
     android:paddingEnd="0dp"
-    android:paddingTop="80dp"
-    android:paddingBottom="80dp"
+    android:paddingTop="0dp"
+    android:paddingBottom="0dp"
     android:background="@drawable/background"
     tools:context=".MainActivity">
-    <Button
+    <TextView
+        android:id="@+id/signNo"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textColor="@color/colorWhite"
+        android:text=""/>
+
+    <ImageButton
         android:id="@+id/closeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:text="your text"/>
+        android:background="@color/colorGray"
+        android:src="@drawable/close"
+
+        />
 
     <ExpandableListView
         android:id="@+id/expandableListView"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="@android:color/white"
-        android:dividerHeight="0.5dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:layout_below="@id/closeButton"
+        android:layout_marginBottom="0dp"
+        android:divider="@android:color/white"
+        android:dividerHeight="0.5dp"
+        />
+        <!--android:layout_below="@id/closeButton"
+        android:groupIndicator="@drawable/indicator"
+        android:divider="@android:color/white"
+        android:dividerHeight="0.5dp"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
+        -->
 </RelativeLayout>
