--- a/app/src/main/res/layout/activity_signature_details.xml
+++ b/app/src/main/res/layout/activity_signature_details.xml
@@ -13,6 +13,9 @@
         android:id="@+id/signNo"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="5sp"
+        android:layout_marginTop="5sp"
         android:textSize="20sp"
         android:textColor="@color/colorWhite"
         android:text=""/>
@@ -23,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10sp"
+        android:layout_marginTop="10sp"
         android:background="@color/colorGray"
         android:src="@drawable/close"
 
@@ -32,7 +37,8 @@
         android:id="@+id/expandableListView"
         android:layout_width="wrap_content"
         android:layout_height="680dp"
-
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_below="@id/closeButton"
         android:layout_marginBottom="0dp"
         android:divider="@android:color/white"
