--- a/app/src/main/res/layout/list_group.xml
+++ b/app/src/main/res/layout/list_group.xml
@@ -12,6 +12,8 @@
         android:textStyle="bold"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         android:hapticFeedbackEnabled="true"
         />
 </LinearLayout>
