--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,5 +11,7 @@
         android:paddingTop="10dp"
         android:textColor="@color/colorWhite"
         android:textStyle="italic"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
         android:paddingBottom="10dp" />
 </LinearLayout>
