--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,9 +75,10 @@
         android:drawableEnd="@drawable/get_certif"
         android:shadowColor="#000000"
         android:shadowDx="10"
+        android:onClick="startConfiguration"
         android:shadowDy="-10"
         android:shadowRadius="5"
-        android:text="@string/get_certificates"
+        android:text="@string/configuration"
         android:textAlignment="center"
         android:textColor="#EDEDED"
         android:textSize="15sp"
@@ -258,20 +259,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/enterOtp"
         app:layout_constraintVertical_bias="0.374" />
-
-    <Button
-        android:id="@+id/buttonTest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
-        android:text="Test"
-        android:onClick="startConfiguration"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/certList"
-        app:layout_constraintEnd_toStartOf="@+id/button_loadInfo"
-        app:layout_constraintHorizontal_bias="0.695"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
