--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -11,12 +11,14 @@
         android:id="@+id/select_crt"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="60dp"
         android:textSize="20sp"
+        android:textAlignment="center"
         android:layout_alignParentTop="true"
         android:layout_alignBottom="@id/select_crt"
         android:textColor="@color/colorWhite"
         android:layout_centerHorizontal="true"
+        android:drawableStart="@drawable/select"
         android:text="@string/select_crt"
         android:textStyle="bold"
         />
@@ -26,7 +28,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:textAlignment="center"
@@ -41,9 +43,10 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_alignTop="@id/certList11"
-        android:layout_marginTop="130sp"
-        android:layout_marginStart="135sp"
+        android:layout_marginTop="150sp"
+        android:layout_marginStart="120sp"
         android:textSize="20sp"
+        android:drawableStart="@drawable/def_certificate"
         android:textColor="@color/colorWhite"
         android:text="@string/set_certificate_as_default"
         android:textStyle="bold"
@@ -53,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/certList11"
-        android:layout_marginTop="130sp"
+        android:layout_marginTop="150sp"
         android:layout_marginStart="240sp"
         />
     <Button
@@ -61,11 +64,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="350sp"
-        android:layout_marginStart="70sp"
+        android:layout_marginStart="50sp"
         android:text="@string/set_default"
         android:layout_centerHorizontal="false"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/gradient_color"
+        android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
+        android:shadowColor="#000000"
+        android:drawableEnd="@drawable/save_1"
+        android:shadowDx="10"
+        android:background="@drawable/configuration_buttons"
+        android:textSize="15sp"
         android:onClick="setAsDefault"
         />
     <Button
@@ -73,12 +83,47 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="350sp"
-        android:text="Cancel"
+        android:text="@string/cancel"
+        android:textAlignment="center"
+        android:textColor="#EDEDED"
+        android:textSize="15sp"
+        android:shadowDy="-10"
+        android:shadowRadius="5"
+        android:shadowColor="#000000"
+        android:shadowDx="10"
+        android:background="@drawable/configuration_buttons"
+        android:drawableEnd="@drawable/cancel_1"
         android:layout_centerHorizontal="false"
-        android:layout_marginStart="220sp"
-        android:textColor="@color/colorWhite"
-        android:background="@drawable/gradient_color"
+        android:layout_marginStart="225sp"
         android:onClick="cancelDefCertificate"
+        />
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="311dp"
+        android:layout_height="67dp"
+        android:drawableBottom="@drawable/calendar"
+        android:layout_centerHorizontal="true"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="18sp"
+        android:layout_marginTop="550sp"
+        android:layout_marginBottom="10dp"
+      />
+
+    <TextView
+        android:id="@+id/copyright"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_alignTop="@id/certList11"
+        android:layout_marginTop="550sp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:drawableStart="@drawable/copyright"
+        android:textColor="@color/colorGray"
+        android:text="@string/copyright"
+        android:textStyle="italic"
         />
 
 </RelativeLayout>
