--- a/app/src/main/res/layout/activity_signature_details.xml
+++ b/app/src/main/res/layout/activity_signature_details.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="5sp"
-        android:layout_marginTop="5sp"
+        android:layout_marginTop="35sp"
         android:textSize="20sp"
         android:textColor="@color/colorWhite"
         android:text=""/>
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10sp"
-        android:layout_marginTop="10sp"
+        android:layout_marginEnd="15sp"
+        android:layout_marginTop="30sp"
         android:background="@color/colorGray"
         android:src="@drawable/close"
 
@@ -39,15 +39,25 @@
         android:layout_height="680dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="60dp"
         android:layout_below="@id/closeButton"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="100dp"
         android:divider="@android:color/white"
         android:dividerHeight="0.5dp"
         />
-        <!--android:layout_below="@id/closeButton"
-        android:groupIndicator="@drawable/indicator"
-        android:divider="@android:color/white"
-        android:dividerHeight="0.5dp"
-        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
-        -->
+
+    <TextView
+        android:id="@+id/copyright"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="630sp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="18sp"
+        android:drawableStart="@drawable/copyright"
+        android:textColor="@color/colorGray"
+        android:text="@string/copyright"
+        android:textStyle="italic"
+        />
+
 </RelativeLayout>
