--- a/app/src/main/res/layout/activity_configuration.xml
+++ b/app/src/main/res/layout/activity_configuration.xml
@@ -119,8 +119,8 @@
         android:layout_marginTop="550sp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:drawableStart="@drawable/copyright"
+        android:textSize="16sp"
+        android:drawableEnd="@drawable/copyright"
         android:textColor="@color/colorGray"
         android:text="@string/copyright"
         android:textStyle="italic"
