--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/mobile_remote_signer_v_1_0"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="@color/colorGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -249,10 +249,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
-        android:drawableStart="@drawable/copyright"
+        android:drawableEnd="@drawable/copyright"
         android:text="@string/copyright"
         android:textColor="@color/colorGray"
-        android:textSize="18sp"
+        android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
