--- a/app/src/main/res/layout/activity_signature_details.xml
+++ b/app/src/main/res/layout/activity_signature_details.xml
@@ -53,8 +53,8 @@
         android:layout_marginTop="630sp"
         android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:drawableStart="@drawable/copyright"
+        android:textSize="16sp"
+        android:drawableEnd="@drawable/copyright"
         android:textColor="@color/colorGray"
         android:text="@string/copyright"
         android:textStyle="italic"
